fix(markdown): prevent overflowing text caused by long words
Long links or imaginary long words should break
into multiple lines. Otherwise the text will push out
or overflow out of its container.

--- a/src/components/markdown/partial-styles/_body-text.scss
+++ b/src/components/markdown/partial-styles/_body-text.scss
@@ -12,6 +12,9 @@ p,
 a,
 li {
     font-size: 0.875rem;
+    word-break: break-word;
+    hyphens: auto;
+    -webkit-hyphens: auto;
 }
 
 p {
